tests/integration/graph/snapshots/main__integration__graph__check__graph_check_background_submits_the_check_and_does_not_wait_for_it.snap
---
source: tests/integration/graph/check.rs
expression: json
---
{
  "json_version": "1",
  "data": {
    "target_url": "https://studio.apollographql.com/graph/my-graph/checks/1",
    "workflow_id": "workflow-1",
    "success": true
  },
  "error": null
}
