tests/integration/graph/snapshots/main__integration__graph__check__graph_check_ignores_a_blocking_contract_failure_unless_asked_to_fail_on_it.snap
---
source: tests/integration/graph/check.rs
expression: json
---
{
  "json_version": "3",
  "data": {
    "tasks": {
      "downstream": {
        "task_status": "PASSED",
        "target_url": "https://studio.apollographql.com/graph/my-graph/checks/downstream",
        "variants": [
          {
            "graph_id": "my-graph",
            "variant_name": "mobile",
            "blocking": true,
            "fails_upstream_workflow": null,
            "status": "FAILED"
          }
        ]
      }
    },
    "success": true
  },
  "error": null
}
