tests/integration/graph/snapshots/main__integration__graph__check__graph_check_succeeds_despite_non_blocking_task_status_failure.snap
---
source: tests/integration/graph/check.rs
expression: json
---
{
  "json_version": "3",
  "data": {
    "tasks": {
      "downstream": {
        "task_status": "FAILED",
        "target_url": "https://studio.apollographql.com/graph/my-graph/checks/downstream",
        "variants": [
          {
            "graph_id": "my-graph",
            "variant_name": "mobile",
            "blocking": false,
            "fails_upstream_workflow": false,
            "status": "FAILED"
          }
        ]
      }
    },
    "success": true
  },
  "error": null
}
